Modernize ShopChest for Paper 26.2